--- a/learn.html
+++ b/learn.html
@@ -1,8 +1,24 @@
-<html>
+<!DOCTYPE html>
+<html lang="in_ID">
   <head>
-    <title>kepala</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>learning</title>
   </head>
   <body>
-    <p>halo dunia</p>
+    <table style="border: 1px solid black">
+      <colgroup>
+        <col span="2" style="background-color: aqua" />
+        <col style="background-color: violet" />
+      </colgroup>
+      <tr>
+        <th>hello</th>
+        <th>world</th>
+      </tr>
+      <tr>
+        <th>halo</th>
+        <th>dunia</th>
+      </tr>
+    </table>
   </body>
 </html>
