belajar layout web & css tipis2

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <h1>WEB-01</h1>
         <nav>
           <ul>
-            <li>Home</li>
-            <li>Category</li>
-            <li>Movie List</li>
-            <li>TV Series</li>
+            <li><a href="">Home</a></li>
+            <li><a href="">Category</a></li>
+            <li><a href="">Movie List</a></li>
+            <li><a href="">TV Series</a></li>
           </ul>
         </nav>
       </header>
