--- a/learn.html
+++ b/learn.html
@@ -4,21 +4,100 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>learning</title>
+
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      }
+      header {
+        background-color: #333;
+        text-align: center;
+        padding: 30px;
+        color: white;
+      }
+      article {
+        padding: 30px;
+        width: 100%;
+        background-color: #f1f1f1;
+      }
+      footer {
+        background-color: gray;
+        padding: 10px;
+        text-align: center;
+      }
+      nav {
+        background-color: gray;
+        padding: 10px;
+      }
+      nav ul {
+        list-style-type: none;
+        overflow: hidden;
+      }
+      nav li {
+        display: inline;
+        margin: 10px;
+        padding: 10px;
+        float: left;
+      }
+      nav li a {
+        color: white;
+        text-decoration: none;
+        display: block;
+        text-align: center;
+        padding: 16px;
+      }
+      nav li a:hover {
+        background-color: #333;
+        transition: 0.5s;
+      }
+      article button {
+        background-color: #333;
+        color: white;
+        padding: 10px;
+        border: none;
+        cursor: pointer;
+        margin-top: 10px;
+      }
+      article button:hover {
+        background-color: gray;
+        transition: 0.5s;
+      }
+    </style>
   </head>
   <body>
-    <table style="border: 1px solid black">
-      <colgroup>
-        <col span="2" style="background-color: aqua" />
-        <col style="background-color: violet" />
-      </colgroup>
-      <tr>
-        <th>hello</th>
-        <th>world</th>
-      </tr>
-      <tr>
-        <th>halo</th>
-        <th>dunia</th>
-      </tr>
-    </table>
+    <header>
+      <h1>ini judul halaman</h1>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="">beranda</a></li>
+        <li><a href="">menu</a></li>
+        <li><a href="">tentang kami</a></li>
+      </ul>
+    </nav>
+    <article>
+      <h1>HTML</h1>
+      <p>
+        HTML adalah singkatan dari Hypertext Markup Language, yaitu bahasa
+        markup yang digunakan untuk membuat halaman web
+      </p>
+      <button>
+        <h3>learn more</h3>
+      </button>
+    </article>
+    <article>
+      <h1>CSS</h1>
+      <p>
+        bahasa pemrograman yang digunakan untuk mengatur tampilan website,
+        seperti tata letak, warna, dan font
+      </p>
+      <button>
+        <h3>learn more</h3>
+      </button>
+    </article>
+    <footer>Gael All rights reserved. 2024</footer>
   </body>
 </html>
