--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <aside class="menu">
         <h2>Menu</h2>
         <ul>
-          <li>TRENDING MOVIES</li>
-          <li>TRENDING ANIME</li>
-          <li>TRENDING TV SERIES</li>
+          <li><a href="">TRENDING MOVIES</a></li>
+          <li><a href="">TRENDING ANIME</a></li>
+          <li><a href="">TRENDING TV SERIES</a></li>
         </ul>
       </aside>
       <main class="body">
@@ -37,6 +37,18 @@
         <img src="img/sposter3.jpg" alt="" />
         <img src="img/sposter4.jpg" alt="" />
         <img src="img/sposter5.jpg" alt="" />
+        <h1>ANIME RECOMENDATION</h1>
+        <img src="img/aposter1.jpg" alt="" />
+        <img src="img/aposter2.jpg" alt="" />
+        <img src="img/aposter3.jpg" alt="" />
+        <img src="img/aposter4.jpg" alt="" />
+        <img src="img/aposter5.jpg" alt="" />
+        <h1>MOVIE RECOMENDATION</h1>
+        <img src="img/mposter1.jpg" alt="" />
+        <img src="img/mposter2.jpeg" alt="" />
+        <img src="img/mposter3.jpg" alt="" />
+        <img src="img/mposter4.jpg" alt="" />
+        <img src="img/mposter5.jpg" alt="" />
       </main>
     </div>
   </body>
