--- a/learn.html
+++ b/learn.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>learning</title>
     <link rel="stylesheet" href="learn.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   </head>
   <body>
     <header>
@@ -38,6 +39,35 @@
         <h3>learn more</h3>
       </button>
     </article>
+    <article>
+      <h1>JavaScript</h1>
+      <p>
+        bahasa pemrograman yang digunakan untuk membuat website menjadi lebih
+        interaktif
+      </p>
+      <button>
+        <h3>learn more</h3>
+      </button>
+    </article>
+    <article>
+      <h1>PHP</h1>
+      <p>
+        bahasa pemrograman yang digunakan untuk membuat website menjadi lebih
+        dinamis
+      </p>
+      <button>
+        <h3>learn more</h3>
+    </article>
+    <article>
+      <h1>SQL</h1>
+      <p>
+        bahasa pemrograman yang digunakan untuk mengelola database
+      </p>
+      <button>
+        <h3>learn more</h3>
+      </button>
+    </article>
+
     <footer>Gael All rights reserved. 2024</footer>
   </body>
 </html>
