--- a/regis.html
+++ b/regis.html
@@ -19,28 +19,18 @@
       </ul>
     </nav>
     <form method="get" class="registrasi" action="receive.html">
-      <h1>Registrer</h1>
-      <label for="username">Username</label>
-      <input type="text" name="username" id="username" />
+      <h1>Register</h1>
+      <label for="username">Username</label><br />
+      <input type="text" name="username" id="username" required />
       <br />
-      <label for="password">Password</label>
-      <input type="password" name="password" id="password" />
+      <label for="pass">Password</label><br />
+      <input type="password" name="pass" id="pass" required />
       <br />
-      <label for="telepon">Phone Number</label>
-      <input type="tel" name="telepon" id="telepon" value="+62" />
-      <br />
-      <label for="email">Email</label>
-      <input type="email" name="email" id="email" />
-      <br />
-      <input type="submit" value="Register" />
-      <input type="reset" value="Reset" />
+      <label for="email">Email</label><br />
+      <input type="email" name="email" id="email" required />
       <br />
 
-      Gender: <br />
-      <input type="radio" name="gender" id="male" value="male" />
-      <label for="male">Male</label>
-      <input type="radio" name="gender" id="female" value="female" />
-      <label for="female">Female</label>
+      <button type="submit">Register</button>
     </form>
     <footer>Gael All rights reserved. 2024</footer>
   </body>
