--- a/learn.html
+++ b/learn.html
@@ -20,6 +20,7 @@
       </ul>
     </nav>
     <article>
+      <div class="html">
       <h1>HTML</h1>
       <p>
         HTML adalah singkatan dari Hypertext Markup Language, yaitu bahasa
@@ -28,6 +29,7 @@
       <button>
         <h3>learn more</h3>
       </button>
+    </div>
     </article>
     <article>
       <h1>CSS</h1>
