--- a/text.html
+++ b/text.html
@@ -51,27 +51,40 @@
         max-width: 1000px;
         margin: 0 auto;
       }
-      .poem {
+      .poem-container {
+        display: flex;
+      }
+      .poem,
+      .poem2,
+      .poem3 {
         border-width: 1px;
         max-width: 400px;
         text-align: center;
         align-items: center;
         justify-content: center;
-        margin: 0 auto;
+        margin: 0;
         padding: 0px 5px 25px 5px;
         transition: all 0.5s;
       }
-      .poem:hover {
+      .poem:hover,
+      .poem2:hover,
+      .poem3:hover {
         transform: scale(1.1);
         border-radius: 30px;
-        backdrop-filter: blur(8px);
+        backdrop-filter: blur(3px);
         box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
       }
-      .poem h3 {
+      .poem h3,
+      .poem2 h3,
+      .poem3 h3 {
         margin-bottom: 2px;
       }
       .lorem {
         margin-bottom: 20px;
+        margin-top: 5px;
+      }
+      .lorem h1 {
+        margin-bottom: 0px;
       }
     </style>
   </head>
@@ -92,14 +105,32 @@
         perspiciatis deleniti temporibus?
       </p>
     </div>
-    <div class="poem">
-      <h3>a choice</h3>
-      <p>
-        They please me not-- these solemn songs That hint of sermons covered up.
-        'T is true the world should heed its wrongs, But in a poem let me sup,
-        Not simples brewed to cure or ease Humanity's confessed disease, But the
-        spirit-wine of a singing line, Or a dew-drop in a honey cup! ...
-      </p>
+    <div class="poem-container">
+      <div class="poem">
+        <h3>a choice</h3>
+        <p>
+          They please me not-- these solemn songs That hint of sermons covered
+          up. 'T is true the world should heed its wrongs, But in a poem let me
+          sup, Not simples brewed to cure or ease Humanity's confessed disease,
+          But the spirit-wine of a singing line, Or a dew-drop in a honey cup!
+          ...
+        </p>
+      </div>
+      <div class="poem2">
+        <h3>Still I Rise</h3>
+        <p>
+          You may write me down in history With your bitter, twisted lies, You
+          may tread me in the very dirt But still, like dust, I'll rise.
+        </p>
+      </div>
+      <div class="poem3">
+        <h3>The Road Not Taken</h3>
+        <p>
+          Two roads diverged in a yellow wood, And sorry I could not travel both
+          And be one traveler, long I stood And looked down one as far as I
+          could
+        </p>
+      </div>
     </div>
   </body>
 </html>
