add search input and enhance HTML structure with icons

--- a/learn.html
+++ b/learn.html
@@ -19,9 +19,12 @@
         <li class="regis"><a href="regis.html">Register</a></li>
       </ul>
     </nav>
+    <form class="input">
+      <input type="text" name="" id="search" placeholder="Search...">
+    </form>
     <article>
-      <div class="html">
-      <h1>HTML</h1>
+      <divclass="html">
+      <h1><i class="fab fa-html5"></i> HTML</h1>
       <p>
         HTML adalah singkatan dari Hypertext Markup Language, yaitu bahasa
         markup yang digunakan untuk membuat halaman web
@@ -32,7 +35,7 @@
     </div>
     </article>
     <article>
-      <h1>CSS</h1>
+      <h1><i class="fa-brands fa-css3-alt"></i> CSS</h1>
       <p>
         bahasa pemrograman yang digunakan untuk mengatur tampilan website,
         seperti tata letak, warna, dan font
@@ -42,7 +45,7 @@
       </button>
     </article>
     <article>
-      <h1>JavaScript</h1>
+      <h1><i class="fa-brands fa-js"></i> JavaScript</h1>
       <p>
         bahasa pemrograman yang digunakan untuk membuat website menjadi lebih
         interaktif
@@ -52,7 +55,7 @@
       </button>
     </article>
     <article>
-      <h1>PHP</h1>
+      <h1><i class="fa-brands fa-php"></i> PHP</h1>
       <p>
         bahasa pemrograman yang digunakan untuk membuat website menjadi lebih
         dinamis
@@ -61,7 +64,7 @@
         <h3>learn more</h3>
     </article>
     <article>
-      <h1>SQL</h1>
+      <h1><i class="fa-solid fa-database"></i> SQL</h1>
       <p>
         bahasa pemrograman yang digunakan untuk mengelola database
       </p>
