update HTML structure and styles for film recommendations

--- a/index.html
+++ b/index.html
@@ -3,53 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>web 01</title>
+    <title>myFilm</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="img/icon.png" />
   </head>
   <body>
-    <div class="header">
-      <header>
-        <h1>WEB-01</h1>
-        <nav>
-          <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Category</a></li>
-            <li><a href="">Movie List</a></li>
-            <li><a href="">TV Series</a></li>
-          </ul>
-        </nav>
-      </header>
-    </div>
-    <div class="container">
-      <aside class="menu">
-        <h2>Menu</h2>
+    <header>
+      <img src="img/screengrabs-and-wallpapers-v0-vr3l8e7d1wsd1.png" alt="" />
+      <nav>
         <ul>
-          <li><a href="">TRENDING MOVIES</a></li>
-          <li><a href="">TRENDING ANIME</a></li>
-          <li><a href="">TRENDING TV SERIES</a></li>
+          <a href="">Home</a>
+          <a href="">Movie</a>
+          <a href="">Tv Series</a>
+          <a href="">Anime</a>
         </ul>
-      </aside>
-      <main class="body">
-        <h1>TV SERIES RECOMENDATION</h1>
+      </nav>
+    </header>
+    <main>
+      <h1>TV SERIES RECOMMENDATION</h1>
+      <div class="tv">
         <img src="img/sposter1.jpg" alt="" />
         <img src="img/sposter2.png" alt="" />
         <img src="img/sposter3.jpg" alt="" />
         <img src="img/sposter4.jpg" alt="" />
         <img src="img/sposter5.jpg" alt="" />
-        <h1>ANIME RECOMENDATION</h1>
-        <img src="img/aposter1.jpg" alt="" />
-        <img src="img/aposter2.jpg" alt="" />
-        <img src="img/aposter3.jpg" alt="" />
-        <img src="img/aposter4.jpg" alt="" />
-        <img src="img/aposter5.jpg" alt="" />
-        <h1>MOVIE RECOMENDATION</h1>
+      </div>
+      <h1>MOVIE RECOMMENDATION</h1>
+      <div class="movie">
         <img src="img/mposter1.jpg" alt="" />
         <img src="img/mposter2.jpeg" alt="" />
         <img src="img/mposter3.jpg" alt="" />
         <img src="img/mposter4.jpg" alt="" />
         <img src="img/mposter5.jpg" alt="" />
-      </main>
-    </div>
+      </div>
+    </main>
   </body>
 </html>
