update header and add anime recommendation section with improved styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <img src="img/screengrabs-and-wallpapers-v0-vr3l8e7d1wsd1.png" alt="" />
+      <h1>myFilm</h1>
       <nav>
         <ul>
           <a href="">Home</a>
@@ -34,6 +34,14 @@
         <img src="img/mposter3.jpg" alt="" />
         <img src="img/mposter4.jpg" alt="" />
         <img src="img/mposter5.jpg" alt="" />
+      </div>
+      <h1>ANIME RECOMMENDATION</h1>
+      <div class="movie">
+        <img src="img/aposter1.jpg" alt="" />
+        <img src="img/aposter2.jpg" alt="" />
+        <img src="img/aposter3.jpg" alt="" />
+        <img src="img/aposter4.jpg" alt="" />
+        <img src="img/aposter5.jpg" alt="" />
       </div>
     </main>
   </body>
