refactor TV series and movie sections for improved layout and add new test HTML files

--- a/index.html
+++ b/index.html
@@ -20,28 +20,33 @@
     </header>
     <main>
       <h1>TV SERIES RECOMMENDATION</h1>
-      <div class="tv">
-        <img src="img/sposter1.jpg" alt="" />
-        <img src="img/sposter2.png" alt="" />
-        <img src="img/sposter3.jpg" alt="" />
-        <img src="img/sposter4.jpg" alt="" />
-        <img src="img/sposter5.jpg" alt="" />
-      </div>
-      <h1>MOVIE RECOMMENDATION</h1>
-      <div class="movie">
-        <img src="img/mposter1.jpg" alt="" />
-        <img src="img/mposter2.jpeg" alt="" />
-        <img src="img/mposter3.jpg" alt="" />
-        <img src="img/mposter4.jpg" alt="" />
-        <img src="img/mposter5.jpg" alt="" />
-      </div>
-      <h1>ANIME RECOMMENDATION</h1>
-      <div class="movie">
-        <img src="img/aposter1.jpg" alt="" />
-        <img src="img/aposter2.jpg" alt="" />
-        <img src="img/aposter3.jpg" alt="" />
-        <img src="img/aposter4.jpg" alt="" />
-        <img src="img/aposter5.jpg" alt="" />
+      <div class="image-container">
+        <div class="tv">
+          <img src="img/sposter1.jpg" alt="" />
+          <div class="text">
+            <h2>Hannibal(2013)</h2>
+          </div>
+          <img src="img/sposter2.png" alt="" />
+          <img src="img/sposter3.jpg" alt="" />
+          <img src="img/sposter4.jpg" alt="" />
+          <img src="img/sposter5.jpg" alt="" />
+        </div>
+        <h1>MOVIE RECOMMENDATION</h1>
+        <div class="movie">
+          <img src="img/mposter1.jpg" alt="" />
+          <img src="img/mposter2.jpeg" alt="" />
+          <img src="img/mposter3.jpg" alt="" />
+          <img src="img/mposter4.jpg" alt="" />
+          <img src="img/mposter5.jpg" alt="" />
+        </div>
+        <h1>ANIME RECOMMENDATION</h1>
+        <div class="movie">
+          <img src="img/aposter1.jpg" alt="" />
+          <img src="img/aposter2.jpg" alt="" />
+          <img src="img/aposter3.jpg" alt="" />
+          <img src="img/aposter4.jpg" alt="" />
+          <img src="img/aposter5.jpg" alt="" />
+        </div>
       </div>
     </main>
   </body>
